--- a/todo
+++ b/todo
@@ -28,5 +28,4 @@ NEXT:
 * Character display to user
 * (LOW PRIORITY) Add a subclass/subrace checkbox, blank to start, populated "onchange" from class/race selection
 
-* CSS: on small screens selections should be single list down page
-* Larger screens: 200% more padding between elements
+* CSS: Mockup results display
