--- a/todo
+++ b/todo
@@ -25,12 +25,11 @@ General Program Flow:
 NEXT:
 
 Character Class:
-* Add actual properties to character class from API calls
-* Modify stats, and other properties from race and class
-* Generate health 
 * Add calculated getters for things like ability bonuses
+* Generate health 
 * For each API result with a choice add ability to chose and add results to object
 * Display these properties to the user
+* Ability to chose proficiencies, spells, equipment, etc
 
 Main App:
 * Add ability to save genrated character
