free from promise chains

--- a/todo
+++ b/todo
@@ -19,20 +19,21 @@ General Program Flow:
 
 * Save/Load Character
 
-* Add other levels to character?
+* Add other levels to character
 
 
 NEXT:
 
 Character Class:
-** Mockup quick auto-picking function for now:
+* Finish adding all needed properties to class
+* Display entire character to the user
+* Mockup quick auto-picking function for now:
 * For each API result with a choice add ability to chose and add results to object
 * Ability to chose proficiencies, spells, equipment, etc
-* Display entire character to the user
 * Add calculated getters for things like ability bonuses (is needed with how I'm doing things?)
 
 Main App:
-* Add ability to save genrated character - Pass the promise in somehow...
+* Add ability to save genrated character
 * Add ability to load previous character
 * Add ability to add levels to character
 * (LOW PRIORITY) Add a subclass/subrace checkbox, blank to start, populated "onchange" from class/race selection
